...
        self.inputtedText.resignFirstResponder()

        guard let unwrappedInputtedText = self.inputtedText.text else { return }

        // 入力が空ならエラーを通知
        if unwrappedInputtedText.isEmpty {
            showErrorAlert(errorMessage: "入力が空です")
            return
        }

        // ロード中である旨を示すUIを表示
        HUD.show(.progress)

...
