...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ot2-aE-lb2">
                                <rect key="frame" x="20" y="335" width="374" height="35"/>
                                <color key="backgroundColor" red="1" green="0.44705882352941173" blue="0.44705882352941173" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="ZUn-jr-Sl3"/>
                                </constraints>
                                <state key="normal" title="OK">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="okButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wFV-wg-2Qb"/>
                                </connections>
                            </button>
...
